<resources>
    <string name="app_name">Chat App Project</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_password">Enter the Password</string>
    <string name="enter_the_email">Enter the Email</string>
    <string name="login">LOGIN</string>
    <string name="dont_have_an_account_sign_up">Don\'t have an account? SignUp</string>
    <string name="enter_the_user_name">Enter the User Name</string>
    <string name="settings">Settings</string>
    <string name="add_friend">Add Friend</string>
    <string name="create_a_group">Create a Group</string>
    <string name="logout">Logout</string>
    <string name="add_profile_photo">Add Profile Photo</string>
</resources>